# DANSur_22

./: .gitignore  LICENSE  README.md  __init__.py  environment.yml  pyproject.toml  requirements.txt
data/: sxs_waveforms.h5
scripts/: DANSur.pt  NNSur.pt  __init__.py  comparison.py  config.yaml  create_jit_model.py  pretrain_22.py  pretrain_hm.py  sur_utils.py  sxs_finetune.py  sxs_finetune_kfold.py  sxs_hm.py  sxs_utils.py  timing.py  train_decoder_ensemble.py  utils.py  waveform_generation.py
scripts/surrogate/: __init__.py  create_jit_model.py  sur_utils.py  timing.py  waveform_generation.py
scripts/training/: __init__.py  comparison.py  pretrain_22.py  sxs_finetune.py  sxs_finetune_kfold.py  train_decoder_ensemble.py
scripts/utils/: __init__.py  common.py  sxs_utils.py  utils.py
submission/: finetune_sxs.sh  finetune_sxs_kfold.sh  generation_submit.sh
