[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dansur-22"
version = "1.0.0"
description = "Dual-stage Artificial Neural Surrogate for gravitational wave signals"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "DANSur Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.11"
dependencies = [
    "bilby>=2.7.0",
    "gwsurrogate>=1.1.8",
    "gwtools>=1.2.0",
    "h5py>=3.15.1",
    "joblib>=1.5.2",
    "lalsuite>=7.26.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyspherical>=0.0.2",
    "pytorch-optimizer>=3.8.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "torch-pca>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/osvaldogramaxo/DANSur_22"
Repository = "https://github.com/osvaldogramaxo/DANSur_22"
Documentation = "https://github.com/osvaldogramaxo/DANSur_22/blob/main/README.md"
"Bug Tracker" = "https://github.com/osvaldogramaxo/DANSur_22/issues"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=scripts --cov-report=html --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
